--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>plugin</groupId>
-    <artifactId>Panadero-Core</artifactId>
+    <artifactId>panadero-core</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -15,6 +15,14 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Jairusu Danieru Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/jairusudanieru/Panadero-Core</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
