--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub Jairusu Danieru Apache Maven Packages</name>
+            <name>GitHub Jairusu Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/jairusudanieru/Panadero-Core</url>
         </repository>
     </distributionManagement>
@@ -90,11 +90,9 @@
         </dependency>
         <dependency>
             <groupId>plugin</groupId>
-            <artifactId>PanaderoLobby</artifactId>
+            <artifactId>panadero-lobby</artifactId>
             <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>C:\Users\jairu\Documents\Intellij IDEA Projects\Minecraft Plugins\PanaderoLobby\target\PanaderoLobby-1.0.jar</systemPath>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
