--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,5 @@ api-version: '1.20'
 
 commands:
   panadero:
-    description: The main command for this plugin
+    description: panadero
     permission: op
-    usage: /panadero <subcommand>
