--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub Jairusu Apache Maven Packages</name>
+            <name>Panadero-Core</name>
             <url>https://maven.pkg.github.com/jairusudanieru/Panadero-Core</url>
         </repository>
     </distributionManagement>
@@ -69,10 +69,6 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
-        <repository>
-            <id>codemc-repo</id>
-            <url>https://repo.codemc.org/repository/maven-public/</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -80,12 +76,6 @@
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>1.20-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>fr.xephi</groupId>
-            <artifactId>authme</artifactId>
-            <version>5.6.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
