--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
+            <id>panadero-core</id>
             <name>Panadero-Core</name>
             <url>https://maven.pkg.github.com/jairusudanieru/Panadero-Core</url>
         </repository>
